<resources>

    <string name="app_name">AdaptiveNarrativeMobile</string>

    <string name="resume">Get Location</string>
    <string name="pause">Pause Location Polling</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on this device.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_location_services">Enable Location Services</string>
    <string name="pref_title_proximity_sensor">Enable Proximity Sensor</string>
    <string name="pref_title_light_sensor">Enable Light Sensor</string>
    <string name="pref_title_volume_sensor">Enable Volume Sensor</string>

    <string name="pref_description_social_recommendations">Allow this app to access the device\'s real world location data.</string>
    <string name="pref_description_proximity_sensor">Allow use of the device\'s proximity sensor.</string>
    <string name="pref_description_light_sensor">Allow use of the device\'s light sensor.</string>
    <string name="pref_description_volume_sensor">Allow use of the device\'s volume sensor.</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New podcast notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Synopsis for podcasts -->
    <string name="podcast_breakout">Breaking Out: A short two-character audio drama,
        one of whom is acted by a text-to-voice synthesiser -
        which uses data to adapt the content to the user\'s context. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
