<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="location_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_location_services" />


    <SwitchPreference
        app:key="proximity_switch"
        android:summary="@string/pref_description_proximity_sensor"
        android:title="@string/pref_title_proximity_sensor"
        />

    <SwitchPreference
        app:key="light_switch"
        android:summary="@string/pref_description_light_sensor"
        android:title="@string/pref_title_light_sensor"
        />

    <SwitchPreference
        app:key="volume_switch"
        android:summary="@string/pref_description_volume_sensor"
        android:title="@string/pref_title_volume_sensor"
        />

    <!--

    <CheckBoxPreference
        android:key="checkbox_preference"
        android:title="Checkbox Preference"
        android:defaultValue="false"/>
        -->


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

<!--
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
        -->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


<!--
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->



</PreferenceScreen>
